--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,8 @@ env_default = d1_mini
 platform = espressif8266
 board = d1_mini
 framework = arduino
-upload_port=192.168.1.33
+;upload_port=192.168.1.33
+upload_port=192.168.0.184
 upload_speed = 921600
 monitor_speed=115200
 
